added route and button to delete a queue

--- a/lib/http/public/stylesheets/actions.styl
+++ b/lib/http/public/stylesheets/actions.styl
@@ -4,6 +4,11 @@
   fixed: top -2px right -2px
   z-index: 20
 
+#clear
+  height: 18px;
+  background: #DDD;
+
+#clear
 #sort
 #filter
 #search
@@ -18,10 +23,12 @@
   &:hover
     border-color: #eee - 10%
 
+#clear
 #sort
 #filter
   cursor: pointer
 
+#clear
 #sort
 #filter
   border-radius: 0
